--- a/Frontend/src/app/view/item-detail-view/item-detail-view.component.html
+++ b/Frontend/src/app/view/item-detail-view/item-detail-view.component.html
@@ -116,11 +116,16 @@
         <div class="card card-body">
           <!-- Reviews-->
           <div class="mb-4 pb-4 border-bottom">
-            <h3 class="h4 pb-3"><i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>4,9 (4 reviews)</h3>
-            <div class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
-              <a class="btn btn-outline-primary mb-sm-0 mb-3" href="#add-review" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="add-review"><i class="fi-edit me-1"></i>Add review</a>
+            <h3 class="h4 pb-3"><i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>
+              4,9 ({{itemReviews.length}} review{{itemReviews.length>1?'s':''}})
+            </h3>
+            <div
+              class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
+              <a class="btn btn-outline-primary mb-sm-0 mb-3" href="#add-review" data-bs-toggle="collapse" role="button"
+                 aria-expanded="false" aria-controls="add-review"><i class="fi-edit me-1"></i>Add review</a>
               <div class="d-flex align-items-center ms-sm-4">
-                <label class="me-2 pe-1 text-nowrap" for="reviews-sorting"><i class="fi-arrows-sort text-muted mt-n1 me-2"></i>Sort by:</label>
+                <label class="me-2 pe-1 text-nowrap" for="reviews-sorting"><i
+                  class="fi-arrows-sort text-muted mt-n1 me-2"></i>Sort by:</label>
                 <select class="form-select" id="reviews-sorting">
                   <option>Newest</option>
                   <option>Oldest</option>
@@ -134,42 +139,78 @@
           <!--add Review-->
           <div class="collapse mb-4 pb-4" id="add-review">
             <div class="card card-body">
-              <form class="needs-validation" novalidate>
+              <form #reviewForm="ngForm" (ngSubmit)="reviewForm.form.valid && addItemReview()" novalidate>
+                <!--<form class="needs-validation" novalidate>-->
                 <div class="mb-3">
                   <label class="form-label" for="review-rating">Rating <span class='text-danger'>*</span></label>
-                  <select class="form-control form-select" id="review-rating" required>
-                    <option value="" selected disabled hidden>Choose rating</option>
-                    <option value="5 stars">5 stars</option>
-                    <option value="4 stars">4 stars</option>
-                    <option value="3 stars">3 stars</option>
-                    <option value="2 stars">2 stars</option>
-                    <option value="1 star">1 star</option>
+                  <select class="form-control form-select" id="review-rating"
+                          [(ngModel)]="itemReview.rating" #itemReviewRate="ngModel"
+                          name="itemReviewRate" required>
+                    <option value="" selected>Choose rating</option>
+                    <option value="5">5 stars</option>
+                    <option value="4">4 stars</option>
+                    <option value="3">3 stars</option>
+                    <option value="2">2 stars</option>
+                    <option value="1">1 star</option>
                   </select>
-                  <div class="invalid-feedback">Please rate the property.</div>
+                  <div *ngIf="(itemReviewRate.touched || reviewForm.submitted) && itemReviewRate.errors?.required"
+                       class="validErr">
+                    Please rate the property
+                  </div>
+                  <!--<div class="invalid-feedback">Please rate the property.</div>-->
                 </div>
                 <div class="mb-4">
                   <label class="form-label" for="review-text">Review <span class='text-danger'>*</span></label>
-                  <textarea class="form-control" id="review-text" rows="5" placeholder="Your review message" required></textarea>
-                  <div class="invalid-feedback">Please write your review.</div>
+                  <textarea class="form-control" id="review-text" rows="5" placeholder="Your review message"
+                            required [(ngModel)]="itemReview.description" #itemReviewDesc="ngModel"
+                            name="itemReviewDesc"></textarea>
+                  <div *ngIf="(itemReviewDesc.touched || reviewForm.submitted) && itemReviewDesc.errors?.required"
+                       class="validErr">
+                    Please write your review
+                  </div>
+                  <!--<div class="invalid-feedback">Please write your review.</div>-->
                 </div>
                 <button class="btn btn-success d-block w-100 mb-4" type="submit">Submit a review</button>
               </form>
             </div>
           </div>
           <!-- Review-->
-          <div class="mb-4 pb-4 border-bottom">
+          <div class="mb-4 pb-4 border-bottom" *ngFor="let itemReview of itemReviews">
             <div class="d-flex justify-content-between mb-3">
-              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1" src="../../../assets/img/37.png" width="48" alt="Avatar">
+              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
+                                                               src="../../../assets/img/37.png" width="48" alt="Avatar">
                 <div class="ps-2">
-                  <h6 class="fs-base mb-0">Annette Black</h6><span class="star-rating"><i class="star-rating-icon fi-star-filled active"></i><i class="star-rating-icon fi-star-filled active"></i><i class="star-rating-icon fi-star-filled active"></i><i class="star-rating-icon fi-star-filled active"></i><i class="star-rating-icon fi-star-filled active"></i></span>
+                  <h6 class="fs-base mb-0">
+                    {{itemReview.customerProfile.firstName + ' ' + itemReview.customerProfile.lastName}}
+                  </h6>
+                  <!--<span class="star-rating"><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i></span>-->
                 </div>
-              </div><span class="text-muted fs-sm">Jan 17, 2021</span>
+              </div>
+              <!--<span class="text-muted fs-sm">Jan 17, 2021</span>-->
+              <span class="text-muted fs-sm">{{itemReview.postedDate}}</span>
             </div>
-            <p>Elementum ut quam tincidunt egestas vitae elit, hendrerit. Ullamcorper nulla amet lobortis elit, nibh condimentum enim. Aliquam felis nisl tellus sodales lectus dictum tristique proin vitae. Odio fermentum viverra tortor quis.</p>
+            <p>{{itemReview.description}}</p>
             <div class="d-flex align-items-center">
-              <button class="btn-like" type="button"><i class="fi-like"></i><span>(3)</span></button>
+              <button class="btn-like" type="button" (click)="addItemReviewResponse(itemReview,'like')"
+                      [ngStyle]="{'color':
+              itemReview.responseByMe!==undefined?
+              itemReview.responseByMe.response==='like'?'green':'':''}">
+                <i class="fi-like"></i>
+                <span>({{itemReview.likeCount}})</span>
+              </button>
               <div class="border-end me-1">&nbsp;</div>
-              <button class="btn-dislike" type="button"><i class="fi-dislike"></i><span>(0)</span></button>
+              <button class="btn-dislike" type="button" (click)="addItemReviewResponse(itemReview,'dislike')"
+                      [ngStyle]="{'color':
+              itemReview.responseByMe!==undefined?
+              itemReview.responseByMe.response==='dislike'?'red':'':''}">
+                <i class="fi-dislike"></i>
+                <span>({{itemReview.dislikeCount}})</span>
+              </button>
             </div>
           </div>
 
@@ -196,13 +237,13 @@
           class="fi-arrow-back fs-lg me-2"></i>Back</a>
       </li>
       <li class="nav-item me-2" *ngIf="review">
-        <a class="btn btn-md btn-outline-info" href="#item-view" data-bs-toggle="tab"
+        <a id="item-back-btn" class="btn btn-md btn-outline-info" href="#item-view" data-bs-toggle="tab"
            role="tab" (click)="review=false"><i
           class="fi-arrow-back fs-lg me-2"></i>Back</a>
       </li>
       <li class="nav-item me-2">
         <a class="btn btn-md btn-outline-primary" href="#item-review" data-bs-toggle="tab" role="tab"
-        (click)="review=true"><i
+           (click)="getItemReviews()"><i
           class="fi-star fs-lg me-2"></i>Reviews</a>
       </li>
     </ul>
