--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -77,10 +77,10 @@
                style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 0px;margin-bottom: 20px">
             <div class="col" style="padding: 0px">
               <div style="border-right: 1px solid #d3d3d3">
-                <p class="mb-1 fs-sm" style="margin-top: 20px;color: #d48f03;font-weight: bold;text-align: center">
-                  Make To Order </p>
-                <!--<p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">-->
-                <!--{{itemPackage.quantity}}</p>-->
+                <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
+                  {{itemPackage.makeToOrder?'Max':''}} Quantity
+                </p>
+                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{itemPackage.quantity}}</p>
               </div>
             </div>
             <div class="col" style="padding: 0px">
@@ -237,8 +237,8 @@
               <form #reviewForm="ngForm" (ngSubmit)="reviewForm.form.valid && addItemPackageReview()" novalidate>
                 <!--<form class="needs-validation" novalidate>-->
                 <div class="mb-3">
-                  <label class="form-label" for="review-rating">Rating <span class='text-danger'>*</span></label>
-                  <select class="form-control form-select" id="review-rating"
+                  <label class="form-label" for="p-review-rating">Rating <span class='text-danger'>*</span></label>
+                  <select class="form-control form-select" id="p-review-rating"
                           [(ngModel)]="itemPackageReview.rating" #itemPackageReviewRate="ngModel"
                           name="itemPackageReviewRate" required>
                     <option value="" selected>Choose rating</option>
@@ -256,8 +256,8 @@
                   <!--<div class="invalid-feedback">Please rate the property.</div>-->
                 </div>
                 <div class="mb-4">
-                  <label class="form-label" for="review-text">Review <span class='text-danger'>*</span></label>
-                  <textarea class="form-control" id="review-text" rows="5" placeholder="Your review message"
+                  <label class="form-label" for="p-review-text">Review <span class='text-danger'>*</span></label>
+                  <textarea class="form-control" id="p-review-text" rows="5" placeholder="Your review message"
                             required [(ngModel)]="itemPackageReview.description" #itemPackageReviewDesc="ngModel"
                             name="itemPackageReviewDesc"></textarea>
                   <div
