--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -159,8 +159,17 @@
                     <!--data-bs-target="#fi-item-viewer" style="font-weight: bold;padding: 0px">{{itemPackage.name}}</a>-->
                     <!--</h3>-->
                     <div class="border-top border-light pt-0 mb-2">
-
                       <div class="row cols-sm-2 row-cols-md-12">
+                        <div class="col" style="padding: 0px">
+                          <div style="border-right: 1px solid #d3d3d3">
+                            <p class="mb-1 fs-sm"
+                               style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
+                              {{itemPackage.makeToOrder?'Max':''}} Quantity
+                            </p>
+                            <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">
+                              {{itemPackage.quantity}}</p>
+                          </div>
+                        </div>
                         <div class="col" style="padding: 0px">
                           <p class="mb-2 fs-sm"
                              style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
@@ -171,23 +180,24 @@
                             itemPackage.discountType==='Percentage' ? (itemPackage.discount + '%') : ''}}
                           </p>
                         </div>
-                        <div class="col"
-                             style="padding: 0px;display: grid;justify-content: center;align-content: center">
-                          <div style="border-right: 1px solid #d3d3d3">
-                            <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>
-                              <span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price}}</span>
-                              <span *ngIf="itemPackage.discountType!=='None'"
-                                    style="text-decoration: line-through;color: red">LKR {{itemPackage.price}}</span>
-                              <span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{itemPackage.discountedPrice}}</span>
-                            </div>
-                          </div>
-                        </div>
+                        <!--<div class="col"-->
+                        <!--style="padding: 0px;display: grid;justify-content: center;align-content: center">-->
+                        <!--<div style="border-right: 1px solid #d3d3d3">-->
+                        <!--<div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>-->
+                        <!--<span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price}}</span>-->
+                        <!--<span *ngIf="itemPackage.discountType!=='None'"-->
+                        <!--style="text-decoration: line-through;color: red">LKR {{itemPackage.price}}</span>-->
+                        <!--<span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{itemPackage.discountedPrice}}</span>-->
+                        <!--</div>-->
+                        <!--</div>-->
+                        <!--</div>-->
                       </div>
-                      <!--<div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>-->
-                      <!--<span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price}}</span>-->
-                      <!--<span *ngIf="itemPackage.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{itemPackage.price}}</span>-->
-                      <!--<span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(itemPackage)}}</span>-->
-                      <!--</div>-->
+                      <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>
+                        <span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price}}</span>
+                        <span *ngIf="itemPackage.discountType!=='None'"
+                              style="text-decoration: line-through;color: red">LKR {{itemPackage.price}}</span>
+                        <span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{itemPackage.discountedPrice}}</span>
+                      </div>
                     </div>
                   </div>
                   <div class="card-footer d-flex pt-3 text-nowrap">
