--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -141,7 +141,8 @@
             <div class="col" style="padding: 0px">
               <div style="border-right: 1px solid #d3d3d3">
                 <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
-                  Quantity </p>
+                  {{item.makeToOrder?'Max':''}} Quantity
+                </p>
                 <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.quantity}}</p>
               </div>
             </div>
@@ -181,7 +182,7 @@
           <form #baManageFormItemE="ngForm" (ngSubmit)="baManageFormItemE.form.valid && onSubmitE()" novalidate>
 
             <div class="row">
-              <div class="col-md-8 mb-3">
+              <div class="col-md-12 mb-3">
                 <label class="form-label"
                 >Title</label
                 >
@@ -223,6 +224,13 @@
                   Quantity is required
                 </div>
                 <div class="valid-tooltip">Looks good!</div>
+              </div>
+              <div class="col-md-4 mb-3" style="margin-top: 46px">
+                <label>
+                  Make To Order
+                  <input type="checkbox" name="makeToOrder" style="margin-left: 5px; transform: scale(1.4)"
+                         [(ngModel)]="item.makeToOrder">
+                </label>
               </div>
               <!-- <div class="col-md-4 mb-3">
                       <label class="form-label" for="validationTooltipUsername">Username</label>
