--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -61,7 +61,7 @@
           (ngSubmit)="baManageFormPackage.form.valid && onSubmit()" novalidate>
 
       <div class="row">
-        <div class="col-md-8 mb-3">
+        <div class="col-md-12 mb-3">
           <label class="form-label" for="validationTooltipp1"
           >Package name</label
           >
@@ -82,7 +82,36 @@
             Package Name is required
           </div>
         </div>
-
+        <div class="col-md-4 mb-3">
+          <label class="form-label" for="validationTooltip02">
+            Quantity
+          </label>
+          <a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"
+             data-bs-toggle="tooltip" title="Item quantity" data-bs-original-title="Item quantity"
+             aria-label="Item quantity"><i class="fi-help"></i>
+          </a>
+          <input
+            class="form-control"
+            type="number"
+            placeholder="Quantity"
+            id="validationTooltip02"
+            min="1"
+            required
+            [(ngModel)]="itemPackage.quantity" #packageQty="ngModel" name="packageQty"
+          />
+          <div *ngIf="(packageQty.touched || baManageFormPackage.submitted) && packageQty.errors?.required"
+               class="validErr">
+            Quantity is required
+          </div>
+          <div class="valid-tooltip">Looks good!</div>
+        </div>
+        <div class="col-md-4 mb-3" style="margin-top: 46px">
+          <label>
+            Make To Order
+            <input type="checkbox" name="makeToOrder" style="margin-left: 5px; transform: scale(1.4)"
+                   [(ngModel)]="itemPackage.makeToOrder">
+          </label>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-4 mb-3">
@@ -327,7 +356,8 @@
         <div class="d-flex flex-wrap mb-4">
                 <span *ngFor="let itemPackageFeature of itemPackage.itemPackageItemPackageFeatures;let j = index"
                       class="bg-success text-light fs-sm btn btn-xs opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">{{itemPackageFeature.itemPackageFeature.name}}
-                  <i class="fi-x fs-xs ms-2" (click)="itemPackage.itemPackageItemPackageFeatures.splice(i,1)" style="cursor: pointer"></i>
+                  <i class="fi-x fs-xs ms-2" (click)="itemPackage.itemPackageItemPackageFeatures.splice(i,1)"
+                     style="cursor: pointer"></i>
                 </span>
         </div>
       </div>
@@ -405,37 +435,37 @@
 </div>
 
 <!--<div class="row" style="margin-top: 30px">-->
-  <!--<div class="col-md-12 mb-3">-->
-    <!--&lt;!&ndash;<label class="form-label"&ndash;&gt;-->
-    <!--&lt;!&ndash;&gt;Business type </label&ndash;&gt;-->
-    <!--&lt;!&ndash;&gt;&ndash;&gt;-->
-    <!--&lt;!&ndash;<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"&ndash;&gt;-->
-    <!--&lt;!&ndash;data-bs-toggle="tooltip" title="Select this item belongs to which type of business"&ndash;&gt;-->
-    <!--&lt;!&ndash;data-bs-original-title="Select this item belongs to which type of business"&ndash;&gt;-->
-    <!--&lt;!&ndash;aria-label="Select this item belongs to which type of business"><i class="fi-help"></i>&ndash;&gt;-->
-    <!--&lt;!&ndash;</a>&ndash;&gt;-->
-    <!--&lt;!&ndash; <div class="d-flex flex-column flex-sm-row"> &ndash;&gt;-->
-    <!--<ng-select-->
-      <!--[items]="businessCategories"-->
-      <!--bindLabel="name"-->
-      <!--placeholder="Select Business Type"-->
-      <!--dropdownPosition="auto"-->
-      <!--[multiple]="false"-->
-      <!--[searchWhileComposing]="true"-->
-      <!--(change)="getItemPackagesOrdered()"-->
-      <!--[(ngModel)]="businessProfileCategory">-->
-    <!--</ng-select>-->
-    <!--&lt;!&ndash; <div class="invalid-tooltip">-->
-      <!--Please fill item quantity-->
-    <!--</div>-->
-    <!--<div class="valid-tooltip">Looks good!</div> &ndash;&gt;-->
-    <!--&lt;!&ndash; <button type="button" class="btn btn-light-primary btn-icon shadow-sm">-->
-      <!--<i class="fi-plus"></i>-->
-    <!--</button> &ndash;&gt;-->
-    <!--&lt;!&ndash; <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> &ndash;&gt;-->
-    <!--&lt;!&ndash; </div> &ndash;&gt;-->
+<!--<div class="col-md-12 mb-3">-->
+<!--&lt;!&ndash;<label class="form-label"&ndash;&gt;-->
+<!--&lt;!&ndash;&gt;Business type </label&ndash;&gt;-->
+<!--&lt;!&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"&ndash;&gt;-->
+<!--&lt;!&ndash;data-bs-toggle="tooltip" title="Select this item belongs to which type of business"&ndash;&gt;-->
+<!--&lt;!&ndash;data-bs-original-title="Select this item belongs to which type of business"&ndash;&gt;-->
+<!--&lt;!&ndash;aria-label="Select this item belongs to which type of business"><i class="fi-help"></i>&ndash;&gt;-->
+<!--&lt;!&ndash;</a>&ndash;&gt;-->
+<!--&lt;!&ndash; <div class="d-flex flex-column flex-sm-row"> &ndash;&gt;-->
+<!--<ng-select-->
+<!--[items]="businessCategories"-->
+<!--bindLabel="name"-->
+<!--placeholder="Select Business Type"-->
+<!--dropdownPosition="auto"-->
+<!--[multiple]="false"-->
+<!--[searchWhileComposing]="true"-->
+<!--(change)="getItemPackagesOrdered()"-->
+<!--[(ngModel)]="businessProfileCategory">-->
+<!--</ng-select>-->
+<!--&lt;!&ndash; <div class="invalid-tooltip">-->
+<!--Please fill item quantity-->
+<!--</div>-->
+<!--<div class="valid-tooltip">Looks good!</div> &ndash;&gt;-->
+<!--&lt;!&ndash; <button type="button" class="btn btn-light-primary btn-icon shadow-sm">-->
+<!--<i class="fi-plus"></i>-->
+<!--</button> &ndash;&gt;-->
+<!--&lt;!&ndash; <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> &ndash;&gt;-->
+<!--&lt;!&ndash; </div> &ndash;&gt;-->
 
-  <!--</div>-->
+<!--</div>-->
 <!--</div>-->
 
 <div class="modal fade" role="dialog" id="new-packageFeature" tabindex="-1" aria-hidden="true" style="z-index: 9999">
@@ -457,7 +487,8 @@
           <i class="fi-alert-circle me-2 me-sm-3 lead"></i>
           <div>It takes few minutes to review your feature.Then we will add it into your item.</div>
         </div>
-        <form class="tab-pane fade show active" autocomplete="off" id="add-feature-e" #baManageFormPackageFeature="ngForm"
+        <form class="tab-pane fade show active" autocomplete="off" id="add-feature-e"
+              #baManageFormPackageFeature="ngForm"
               (ngSubmit)="baManageFormPackageFeature.form.valid && addFeatureTemp()" novalidate>
           <div class="mb-3">
             <label class="form-label" for="feature">Feature</label>
