--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
@@ -3,11 +3,18 @@
   <div class="col-sm-12 col-md-6 col-xl-4" *ngFor="let item of items">
     <div class="card shadow-sm card-hover border-0 h-100">
       <div class="tns-carousel-wrapper card-img-top card-img-hover"><a class="img-overlay"></a>
+        <div class="position-absolute start-0 top-0 pt-3 ps-3"
+             style="width: 95%;display: flex;justify-content: right">
+          <div *ngIf="item.makeToOrder"
+            class="d-table badge bg-info">Make To Order
+          </div>
+        </div>
         <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
           class="d-table badge bg-primary cursor-point"><h4 class="h6 text-light fs-sm"
                                                             style="margin-bottom: 0px;"><i
           class="fi-star fs-sm"></i> 4.5 / 5</h4></span></div>
-        <div class="content-overlay end-0 top-0 pt-3 pe-3">
+        <div class="content-overlay end-0 top-0"
+             style="display: flex;justify-content: right;width: 95%;margin-top: 158px;margin-right: 10px">
           <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
                   data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favourite"><i
             class="fi-heart"></i></button>
@@ -31,11 +38,19 @@
           <div class="row cols-sm-2 row-cols-md-12"
                style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">
             <div class="col" style="padding: 0px">
-              <div style="border-right: 1px solid #d3d3d3">
+              <div *ngIf="item.quantity>0" style="border-right: 1px solid #d3d3d3">
                 <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                   {{item.makeToOrder?'Max':''}} Quantity
                 </p>
                 <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.quantity}}</p>
+              </div>
+              <div *ngIf="item.quantity===0" style="border-right: 1px solid #d3d3d3;margin-top: 22px">
+                <p class="mb-2 fs-sm fw-bold mx-2"
+                   style="text-align: center;">
+                  <span style="color: #f24605;padding: 5px;border: 1px solid #f24605;border-radius: 10px">
+                    Out Of Stock
+                  </span>
+                </p>
               </div>
             </div>
             <div class="col" style="padding: 0px">
@@ -49,9 +64,10 @@
             </div>
           </div>
           <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>
-            <span *ngIf="item.discountType==='None'">LKR {{item.price}}</span>
-            <span *ngIf="item.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.price}}</span>
-            <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{item.discountedPrice}}</span>
+            <span *ngIf="item.discountType==='None'">LKR {{item.price | number:'.2-2'}}</span>
+            <span *ngIf="item.discountType!=='None'"
+                  style="text-decoration: line-through;color: red">LKR {{item.price | number:'.2-2'}}</span>
+            <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{item.discountedPrice | number:'.2-2'}}</span>
           </div>
         </div>
       </div>
