--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -13,8 +13,8 @@
 
             <!-- <a class="img-overlay" href="#"></a> -->
             <span class="img-gradient-overlay"></span>
-            <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
-              class="d-table badge bg-info">{{itemPackage.name}}</span></div>
+            <!--<div class="position-absolute start-0 top-0 pt-3 ps-3"><span-->
+              <!--class="d-table badge bg-info">{{itemPackage.name}}</span></div>-->
 
             <div class="card-footer border-0 pt-5 pb-4 gy-3 w-100 position-absolute bottom-0 end-0">
               <div class="d-sm-flex justify-content-between align-items-end">
@@ -27,7 +27,7 @@
                   </div>
                 </a>
                 <div class="btn-group ms-n2 ms-sm-5 mt-3 justify-content-end">
-                  <a class="btn btn-primary px-3">LKR {{itemPackage.price}}</a>
+                  <a class="btn btn-primary px-3">LKR {{itemPackage.price | number:'.2-2'}}</a>
                   <button
                     class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                     type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#package' + i" aria-expanded="true"
